# elysh

./: Cargo.toml
crates/edit/: Cargo.toml
crates/edit/examples/: edit.rs
crates/edit/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/examples/: args.rs  command.rs  vars.rs
crates/syntax/src/: args.rs  chars.rs  command.rs  common.rs  lib.rs  quote.rs  token.rs  value.rs  vars.rs
crates/theme/: Cargo.toml
crates/theme/src/: color.rs  display.rs  lib.rs  style.rs
src/: buffer.rs  context.rs  history.rs  input.rs  lexer.rs  line.rs  main.rs  paths.rs  session.rs
src/input/: modifiers.rs  repr.rs
