[package]
edition = "2021"
name = "elysh"
version = "0.0.0"

[dependencies.cream]
git = "https://github.com/mov-rax-rax/cream"

[dependencies.elysh-edit]
path = "crates/edit"

[dependencies.elysh-syntax]
path = "crates/syntax"

[dependencies.elysh-theme]
path = "crates/theme"

[dependencies.frosting]
git = "https://github.com/mov-rax-rax/frosting"

[dependencies.fst]
version = "0.4"

[dependencies.libc]
version = "0.2"

[dependencies.termios]
version = "0.3"

[dependencies.tokio]
features = ["fs", "io-util", "macros", "net", "process", "rt", "signal", "time"]
version = "1.17"

[profile.release]
lto = "fat"

[workspace]
members = ["crates/*"]
